tests/poof/fixtures/errors/error5.cpp

poof( func foo_func(T) {} )

poof( foo_func(undefined_type) )
